# inplace_restarter

./: .gitignore  LICENSE  README.md  pyproject.toml
inplace_restarter/: __init__.py
