[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "inplace_restarter"
author = "Matthias Bussonnier"
author-email = "bussonniermatthias@gmail.com"
home-page = "https://github.com/Carreau/inplace_restarter/"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires= ["ipykernel"]

